--- a/index.html
+++ b/index.html
@@ -102,28 +102,27 @@
       color:#fff !important;
       margin-right: 14px;
       white-space: nowrap;
+      font-size: 1rem;
     }
-    /* Brand + nav aligned left; no big left empty space */
     .navbar .container{
       display:flex;
       align-items:center;
       justify-content:flex-start;
     }
 
-    /* Keep desktop nav in one line and avoid dropping */
     .navbar-nav{
       display:flex;
       flex-wrap: nowrap;
-      gap: 6px;
+      gap: 4px;
     }
 
     .navbar .nav-link{
       color: rgba(255,255,255,.92) !important;
       font-weight:800;
-      padding: .55rem .7rem !important;
+      padding: .45rem .55rem !important;
       border-radius: 10px;
       white-space: nowrap;
-      font-size: .95rem;
+      font-size: .85rem;
     }
     .navbar .nav-link:hover{ background: rgba(255,255,255,.08); }
 
@@ -133,18 +132,16 @@
       margin-left:auto;
     }
 
-    /* On large screens: push menu right a bit but no empty left block */
     @media (min-width: 992px){
       .navbar-collapse{
         display:flex !important;
         flex-grow:1;
       }
       .navbar-nav{
-        margin-left: 8px !important; /* keep close to brand */
+        margin-left: 8px !important;
       }
     }
 
-    /* Mobile dropdown panel */
     @media (max-width: 991px){
       .navbar-collapse{
         background: rgba(10,18,28,.94);
@@ -156,6 +153,23 @@
       .navbar-nav{
         flex-wrap: wrap;
       }
+    }
+
+    .dropdown-menu{
+      border-radius: 14px;
+      overflow:hidden;
+      border: 1px solid rgba(2,6,23,.08);
+      box-shadow: 0 18px 40px rgba(2,6,23,.22);
+      padding: 6px;
+      min-width: 240px;
+    }
+    .dropdown-item{
+      font-weight:800;
+      border-radius: 10px;
+      padding: 10px 12px;
+    }
+    .dropdown-item:hover{
+      background:#f1f5f9;
     }
 
     /* ===================== HERO ===================== */
@@ -217,7 +231,6 @@
       #intro img{width:92px !important;height:92px !important;}
     }
 
-    /* Topics + Speakers */
     .topics-wrap, .speakers-wrap{max-width:980px;margin:0 auto;}
     .topics-grid, .speakers-grid{
       display:grid;
@@ -247,7 +260,6 @@
     .topic-title{font-weight:900;font-size:1.05rem;margin:0;color:#111827;}
     .speaker-text{margin:0;font-weight:900;font-size:1.02rem;color:#111827;}
 
-    /* Scope */
     .about-center{ max-width: 900px; margin: 0 auto; }
     .about-center p{
       text-align: justify !important;
@@ -268,7 +280,6 @@
       margin-top: 16px;
     }
 
-    /* ===================== ORGANIZING TEAM (like speakers UI) ===================== */
     .org-wrap{max-width:980px;margin:0 auto;}
     .org-grid{
       display:grid;
@@ -308,7 +319,6 @@
       line-height:1.6;
     }
 
-    /* Committee cards */
     .committee-title{
       text-align:center;
       font-weight:900;
@@ -343,7 +353,6 @@
       .committee-title{font-size:1.15rem;}
     }
 
-    /* ===================== HOW TO REACH UI ===================== */
     .reach-wrap{max-width:980px;margin:0 auto;}
     .reach-grid{
       display:grid;
@@ -401,7 +410,6 @@
       white-space:nowrap;
     }
 
-    /* ===================== VENUE (map) ===================== */
     .venue-grid{
       display:grid;
       grid-template-columns: 1.1fr .9fr;
@@ -424,7 +432,6 @@
       .map-embed{height:280px;}
     }
 
-    /* Contact */
     #contact .cardx{ padding: 24px; }
     #contact h5{ font-weight: 900; letter-spacing: -.01em; margin-bottom: 12px; }
     #contact p, #contact li{
@@ -435,7 +442,6 @@
     }
     #contact a{font-weight:800;}
 
-    /* Supported logos */
     .supported-logos{
       display:grid;
       grid-template-columns: 1fr 1fr;
@@ -489,25 +495,17 @@
       </button>
 
       <div class="collapse navbar-collapse" id="nav">
-        <!-- LEFT aligned nav so no empty space -->
         <ul class="navbar-nav">
-
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#topics">Topics</a></li>
           <li class="nav-item"><a class="nav-link" href="#speakers">Invited Speakers</a></li>
           <li class="nav-item"><a class="nav-link" href="#dates">Important Dates</a></li>
           <li class="nav-item"><a class="nav-link" href="#registration">Registration</a></li>
-
-          <!-- Committee goes to Organizing Team -->
           <li class="nav-item"><a class="nav-link" href="#organizing-team">Committee</a></li>
-
           <li class="nav-item"><a class="nav-link" href="#howtoreach">How to Reach</a></li>
           <li class="nav-item"><a class="nav-link" href="#venue">Venue</a></li>
-
-          <!-- More removed; keep these always visible -->
           <li class="nav-item"><a class="nav-link" href="#accommodation">Accommodation</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-
         </ul>
       </div>
     </div>
@@ -847,6 +845,7 @@
             </div>
           </div>
 
+          <!-- Map embed -->
           <iframe
             class="map-embed"
             loading="lazy"
@@ -947,7 +946,6 @@
   </script>
 
   <script>
-    // Close mobile navbar: click link OR click outside
     (function () {
       var nav = document.getElementById("nav");
       var toggler = document.querySelector(".navbar-toggler");
@@ -958,14 +956,12 @@
         if (isNavOpen()) toggler.click();
       }
 
-      // Close after clicking any nav link (mobile)
       nav.querySelectorAll("a.nav-link").forEach(function(link){
         link.addEventListener("click", function(){
           closeNav();
         });
       });
 
-      // Close if user taps outside navbar when open (mobile)
       document.addEventListener("click", function(e){
         if (!isNavOpen()) return;
         var clickedInsideNav = nav.contains(e.target);
