--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="Symposium on Algal and Organic Waste Based Biorefinery, March 21–22, 2026, IIT Guwahati.">
 
-  <!-- Better professional font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap + Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -62,7 +60,7 @@
       border-radius: 16px;
       box-shadow: 0 12px 30px rgba(2,6,23,.08);
       padding: 20px;
-      height:100%;
+      height:auto; /* Fixed: changed from 100% to auto to remove blank space */
     }
 
     .kpi{
@@ -260,11 +258,12 @@
     .topic-title{font-weight:900;font-size:1.05rem;margin:0;color:#111827;}
     .speaker-text{margin:0;font-weight:900;font-size:1.02rem;color:#111827;}
 
+    /* FIXED: Scope of event section spacing */
     .about-center{ max-width: 900px; margin: 0 auto; }
     .about-center p{
       text-align: justify !important;
       max-width: 820px;
-      margin: 0 auto;
+      margin: 0 auto 16px; /* Added margin bottom to text only */
       line-height: 1.9;
       font-size: 1.04rem;
       font-weight: 500;
@@ -277,7 +276,7 @@
       flex-wrap:wrap;
       justify-content:center;
       gap:10px;
-      margin-top: 16px;
+      margin-top: 0; /* Reset top margin */
     }
 
     .org-wrap{max-width:980px;margin:0 auto;}
@@ -442,55 +441,50 @@
     }
     #contact a{font-weight:800;}
 
-    .supported-logos{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:14px;
-      margin-top: 14px;
-      align-items: stretch;
-    }
-    .supported-logos .logo-box{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background:#fff;
-      border:1px solid rgba(2,6,23,.10);
-      border-radius:16px;
-      padding:14px;
-      box-shadow: 0 10px 22px rgba(2,6,23,.08);
-      min-height: 170px;
-    }
-    .supported-logos img{
-      max-width: 100%;
-      max-height: 140px;
-      width: auto;
-      height: auto;
-      object-fit: contain;
-    }
-    @media (max-width: 576px){
-      .supported-logos{ grid-template-columns: 1fr; }
-      .supported-logos .logo-box{ min-height: 150px; }
-      .supported-logos img{ max-height: 130px; }
-    }
-
     footer{
       background: var(--olive-900);
       color:#fff;
       padding: 18px 0;
+    }
+
+    /* Logo container styles */
+    .logo-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+    }
+    .logo-img {
+      width: 110px;
+      height: 110px;
+      object-fit: contain;
+      border-radius: 999px;
+      background: rgba(255,255,255,.06);
+      border: 1px solid rgba(255,255,255,.12);
+      padding: 10px;
+    }
+    @media (max-width: 768px) {
+      .logo-container {
+        gap: 20px;
+      }
+      .logo-img {
+        width: 90px;
+        height: 90px;
+      }
     }
   </style>
 </head>
 
 <body>
 
-  <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
 
       <a class="navbar-brand" href="#intro">Symposium 2026</a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav"
-        aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -511,21 +505,19 @@
     </div>
   </nav>
 
-  <!-- HERO -->
   <header id="intro">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-10 text-center">
-          <div class="mb-3">
-            <img src="assets/iitg.png" alt="IIT Guwahati Logo" style="
-              width:110px;height:110px;object-fit:contain;
-              border-radius:999px;
-              background:rgba(255,255,255,.06);
-              border:1px solid rgba(255,255,255,.12);
-              padding:10px;">
+          <div class="logo-container">
+            <img src="assets/iitg.jpeg" alt="IIT Guwahati Logo" class="logo-img">
+            <img src="assets/sparc.jpeg" alt="SPARC Logo" class="logo-img">
           </div>
+  
+    <div style="opacity:.92; font-weight:800; font-size:1.15rem;">SPARC SPONSORED</div>
+          <div style="opacity:.92; font-weight:800; font-size:1.15rem;">International Symposium </div>
+          <div style="opacity:.92; font-weight:800; font-size:1.15rem;">On</div>
 
-          <div style="opacity:.92; font-weight:800; font-size:1.15rem;">International Symposium on</div>
 
           <h1>
             Symposium on <span style="color:#d8ff7a;">Algal</span> and
@@ -535,7 +527,7 @@
           <div class="mt-3"><span class="badge-date">March 21 – 22, 2026</span></div>
 
           <div class="dept mt-4" style="max-width:820px; margin-left:auto; margin-right:auto;">
-            <div><strong>Department of Chemical Engineering</strong> &amp;</div>
+            <div><strong>Department of Chemical Engineering</strong> &</div>
             <div><strong>School of Energy Science and Engineering</strong></div>
             <div><strong>Indian Institute of Technology Guwahati</strong></div>
           </div>
@@ -559,7 +551,6 @@
 
   <main>
 
-    <!-- ABOUT -->
     <section id="about" class="soft-bg">
       <div class="container">
         <div class="section-title"><h3>Scope of the Event</h3></div>
@@ -567,19 +558,13 @@
         <div class="about-center">
           <div class="cardx">
             <p>
-              This symposium brings together various researchers from different parts of the world to brainstorm on the state-of-the-art
-              in the field of algal and organic waste based biorefinery. The biorefinery concept is pursued world-wide to develop economically
-              viable and environmentally sustainable innovative and integrated technologies for the valorization of organic waste materials.
-              The biorefinery develops various processes, such as hydrothermal liquefaction (HTL), for the production of fuels and valuable
-              chemicals. The symposium also covers the topics based on low carbon fuels. The bioeconomy is a rapidly growing field in which
-              low carbon footprint technologies are being developed, supporting to mitigate climate-change. The symposium covers broad thematic
-              areas as mentioned below.
+              This international symposium gathers researchers to discuss state-of-the-art developments in algal and organic waste biorefineries. These sustainable systems aim to develop integrated technologies for valorizing organic waste, including hydrothermal liquefaction (HTL) for fuel and chemical production. The event also covers low-carbon fuels and the growing bioeconomy, supporting climate change mitigation through low carbon technologies.
             </p>
-
+            
             <div class="pill-wrap">
               <span class="pill">Algal biorefinery</span>
               <span class="pill">Organic waste biorefinery</span>
-              <span class="pill">HTL &amp; bio-crude</span>
+              <span class="pill">HTL & bio-crude</span>
               <span class="pill">Techno-economics</span>
               <span class="pill">Life-cycle analysis</span>
             </div>
@@ -588,7 +573,6 @@
       </div>
     </section>
 
-    <!-- TOPICS -->
     <section id="topics">
       <div class="container">
         <div class="section-title"><h3>Symposium Topics</h3></div>
@@ -610,7 +594,6 @@
       </div>
     </section>
 
-    <!-- SPEAKERS -->
     <section id="speakers" class="soft-bg">
       <div class="container">
         <div class="section-title"><h3>Tentative Invited Speakers</h3></div>
@@ -631,7 +614,6 @@
       </div>
     </section>
 
-    <!-- IMPORTANT DATES -->
     <section id="dates">
       <div class="container">
         <div class="section-title"><h3>Important Dates</h3></div>
@@ -657,7 +639,6 @@
       </div>
     </section>
 
-    <!-- REGISTRATION -->
     <section id="registration" class="soft-bg">
       <div class="container">
         <div class="section-title"><h3>Registration</h3></div>
@@ -690,7 +671,6 @@
       </div>
     </section>
 
-    <!-- ORGANIZING TEAM -->
     <section id="organizing-team" class="soft-bg">
       <div class="container">
         <div class="section-title"><h3>Organizing Team</h3></div>
@@ -717,24 +697,12 @@
             <div class="org-tile">
               <div class="org-ico"><i class="fa fa-users"></i></div>
               <div>
-                <p class="org-title">Convener</p>
-                <p class="org-desc">Dr. Vaibhav V Goud, Professor, Department of Chemical Engineering and School of Energy Science and Engineering, IIT Guwahati</p>
-              </div>
-            </div>
-
-            <div class="org-tile">
-              <div class="org-ico"><i class="fa fa-users"></i></div>
-              <div>
-                <p class="org-title">Convener</p>
-                <p class="org-desc">Dr Ajay K Dalai, Professor, University of Saskatchewan, Canada</p>
-              </div>
-            </div>
-
-            <div class="org-tile">
-              <div class="org-ico"><i class="fa fa-users"></i></div>
-              <div>
-                <p class="org-title">Convener</p>
-                <p class="org-desc">Dr Nageswara Rao Peela, Professor, Department of Chemical Engineering, IIT Guwahati</p>
+                <p class="org-title">Conveners</p>
+                <p class="org-desc">
+                  Dr. Vaibhav V Goud, Professor, Department of Chemical Engineering and School of Energy Science and Engineering, IIT Guwahati<br>
+                  Dr Ajay K Dalai, Professor, University of Saskatchewan, Canada<br>
+                  Dr Nageswara Rao Peela, Professor, Department of Chemical Engineering, IIT Guwahati
+                </p>
               </div>
             </div>
 
@@ -744,7 +712,6 @@
       </div>
     </section>
 
-    <!-- ORGANIZING COMMITTEE MEMBERS -->
     <section id="committee-members">
       <div class="container">
         <div class="committee-title">Organizing Committee Members</div>
@@ -767,7 +734,6 @@
       </div>
     </section>
 
-    <!-- HOW TO REACH -->
     <section id="howtoreach" class="soft-bg">
       <div class="container">
         <div class="section-title"><h3>How to Reach</h3></div>
@@ -822,7 +788,6 @@
       </div>
     </section>
 
-    <!-- VENUE -->
     <section id="venue">
       <div class="container">
         <div class="section-title"><h3>Venue</h3></div>
@@ -837,27 +802,19 @@
             </p>
 
             <div class="mt-3 d-flex flex-wrap" style="gap:10px;">
-              <a class="btn btn-outline-dark" style="border-radius:12px; font-weight:900;"
-                 target="_blank" rel="noopener"
-                 href="https://www.google.com/maps?q=IIT+Guwahati+Conference+Centre">
+              <a class="btn btn-outline-dark" style="border-radius:12px; font-weight:900;" target="_blank" rel="noopener" href="https://www.google.com/maps?q=IIT+Guwahati+Conference+Centre">
                 <i class="fa fa-external-link"></i> Open in Google Maps
               </a>
             </div>
           </div>
 
-          <!-- Map embed -->
-          <iframe
-            class="map-embed"
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps?q=IIT%20Guwahati%20Conference%20Centre&output=embed">
+          <iframe class="map-embed" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=IIT%20Guwahati%20Conference%20Centre&output=embed">
           </iframe>
         </div>
 
       </div>
     </section>
 
-    <!-- ACCOMMODATION -->
     <section id="accommodation" class="soft-bg">
       <div class="container">
         <div class="section-title"><h3>Accommodation</h3></div>
@@ -875,44 +832,15 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
     <section id="contact" class="soft-bg">
       <div class="container">
         <div class="section-title"><h3>Contact</h3></div>
 
         <div class="row">
-          <div class="col-lg-7">
+          <div class="col-lg-12">
             <div class="cardx">
-              <h5>Conveners</h5>
-              <ul class="list-clean mb-3">
-                <li>Dr. Vaibhav V Goud, Professor, Department of Chemical Engineering, IIT Guwahati</li>
-                <li>Dr Ajay K Dalai, Professor, University of Saskatchewan, Canada</li>
-                <li>Dr Nageswara Rao Peela, Professor, Department of Chemical Engineering, IIT Guwahati</li>
-              </ul>
-
-              <p class="mb-1"><strong>Address:</strong> Guwahati - 781039, Assam, India</p>
               <p class="mb-1"><strong>Email:</strong> <a href="mailto:algalsymposium@gmail.com">algalsymposium@gmail.com</a></p>
               <p class="mb-0"><strong>Phone:</strong> +91 - 361 - 258 - 2272</p>
-
-              <hr>
-              <div class="d-flex flex-wrap" style="gap:10px;">
-                <a class="btn btn-pill btn-green" target="_blank" rel="noopener" href="https://forms.office.com/r/AwUQQFLP7H">
-                  <i class="fa fa-paper-plane"></i> Abstract Submission Link
-                </a>
-                <a class="btn btn-pill btn-green" target="_blank" rel="noopener" href="https://forms.office.com/r/BB5jGG9Uhp">
-                  <i class="fa fa-ticket"></i> Registration Link
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-5 mt-3 mt-lg-0">
-            <div class="cardx">
-              <h5 class="font-weight-bold">Supported by</h5>
-              <div class="supported-logos">
-                <div class="logo-box"><img src="assets/iitg.png" alt="IIT Guwahati"></div>
-                <div class="logo-box"><img src="assets/parc.jpeg" alt="PARC"></div>
-              </div>
             </div>
           </div>
         </div>
@@ -927,11 +855,9 @@
     </div>
   </footer>
 
-  <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Smooth scroll with navbar offset -->
   <script>
     document.querySelectorAll('a[href^="#"]').forEach(a=>{
       a.addEventListener('click', function(e){
@@ -971,5 +897,4 @@
     })();
   </script>
 
-</body>
-</html>
+</body></html>
