Update registration bank details and revise deadlines

--- a/index.html
+++ b/index.html
@@ -569,9 +569,9 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="cardx">
-              <div class="kpi"><i class="fa fa-calendar"></i><div><strong>Last Date of Abstract Submission</strong><br>February 20, 2026</div></div>
-              <div class="kpi"><i class="fa fa-check-circle"></i><div><strong>Intimation of Acceptance</strong><br>February 20, 2026</div></div>
-              <div class="kpi"><i class="fa fa-clock-o"></i><div><strong>Last Date for Registration</strong><br>February 28, 2026</div></div>
+              <div class="kpi"><i class="fa fa-calendar"></i><div><strong>Last Date of Abstract Submission</strong><br>March 07, 2026</div></div>
+              <div class="kpi"><i class="fa fa-check-circle"></i><div><strong>Intimation of Acceptance</strong><br>March 07, 2026</div></div>
+              <div class="kpi"><i class="fa fa-clock-o"></i><div><strong>Last Date for Registration</strong><br>March 08, 2026</div></div>
               <div class="mt-3 d-flex flex-wrap" style="gap:10px;">
                 <a class="btn btn-pill btn-green" target="_blank" rel="noopener" href="https://forms.office.com/r/AwUQQFLP7H">
                   <i class="fa fa-paper-plane"></i> Submit Abstract
@@ -594,6 +594,7 @@
               <p class="mb-2">Accommodation will be provided in the IITG campus and is included in the registration fee.</p>
               <div class="kpi"><i class="fa fa-graduation-cap"></i><div><strong>Students</strong><br>Rs. 2000 / USD 100</div></div>
               <div class="kpi"><i class="fa fa-briefcase"></i><div><strong>Professionals</strong><br>Rs. 4000 / USD 150</div></div>
+              <div class="kpi"><i class="fa fa-university"></i><div><strong>Bank Account Details</strong><br>Name: Symposium<br>Account Number: 44811918331<br>IFSC Code: SBIN0014262</div></div>
               <a class="btn btn-pill btn-green mt-2" target="_blank" rel="noopener" href="https://forms.office.com/r/BB5jGG9Uhp">
                 <i class="fa fa-ticket"></i> Open Registration Form
               </a>
